# 393torrent

./: .gitignore  393torrent.cabal  393torrent.lkshw  README.md  requirements.txt  test_coverage.sh
docs/: StepOne.dia  StepThree.dia  StepTwo.dia  design.tex  requirements.tex  stageDiagram.dia  threads.dia  vision_scope.tex
src/: Cli.hs  Main.hs  TorrentFile.hs
test/: TestMain.hs  TorrentFileTest.hs  fileinfo_test.py  files_test.py  peer_test.py  torrent_test.py  tracker_test.py  ui_test.py  writetodisk_test.py
testcases/: debian.torrent  multifile.torrent  singlefile.torrent  test2.torrent  ubuntu.torrent
torrent/: fileinfo.py  files.py  peer.py  torrent.py  ui.py  writetodisk.py
