name: 393torrent
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved

executable 393torrent
    build-depends: base >= 3 && < 5
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -fno-warn-missing-signatures
    other-modules: Cli

test-suite test
    build-depends: base >= 3 && < 5, QuickCheck, HUnit, test-framework, test-framework-quickcheck2, test-framework-hunit
    type: exitcode-stdio-1.0
    main-is: TestMain.hs
    hs-source-dirs: src, test
    ghc-options: -Wall -fno-warn-missing-signatures -fhpc -hpcdir dist/hpc/mix/393torrent-0.0.1
